--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="https://images.unsplash.com/photo-1544144433-30600fa08923?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Coctel 1">
       <h2>RIWI FEST</h2>
       <div class="btn1">
-        <a href="https://www.ejemplo.com" target="_blank" >
+        <a href="programacion.html">
             PROGRAMACIÓN
           </a>
       </div>
@@ -33,14 +33,12 @@
             CONOCE NUESTRO MENÚ
           </a>
       </div>
-      
-       
     </div>
     <div class="item">
       <img src="https://plus.unsplash.com/premium_photo-1713720664653-57b8cd60bb63?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDV8fHxlbnwwfHx8fHw%3D" alt="Coctel 3">
       <h2>PRODUCTS</h2>
       <div class="btn1">
-        <a href="https://www.ejemplo.com" target="_blank" >
+        <a href="productos-locales.html">
             PRODUCTOS LOCALES
           </a>
       </div>
